--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -3,3 +3,4 @@ project(basic)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_subdirectory(cpp-data-types)
 add_subdirectory(cpp-references)
+add_subdirectory(cpp-storage-classes)
