--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -4,3 +4,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_subdirectory(cpp-data-types)
 add_subdirectory(cpp-references)
 add_subdirectory(cpp-storage-classes)
+add_subdirectory(cpp-numbers)
+add_subdirectory(cpp-array)
