--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(cpp-references)
 add_subdirectory(cpp-storage-classes)
 add_subdirectory(cpp-numbers)
 add_subdirectory(cpp-array)
+add_subdirectory(cpp-string)
