--- a/basic/cpp-string/CMakeLists.txt
+++ b/basic/cpp-string/CMakeLists.txt
@@ -4,7 +4,7 @@ project(cpp-string)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILESZ
-        main.c
+        main.cpp
         )
 
 add_executable(cpp-string ${SOURCE_FILES})
