cpp class interface

--- a/class/CMakeLists.txt
+++ b/class/CMakeLists.txt
@@ -8,3 +8,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 #add_executable(class ${SOURCE_FILES})
 add_subdirectory(cpp-class)
+add_subdirectory(cpp-inheritance)
