--- a/class/cpp-inheritance/CMakeLists.txt
+++ b/class/cpp-inheritance/CMakeLists.txt
@@ -1,13 +1,11 @@
 cmake_minimum_required(VERSION 3.0.2)
 
-project(cpp-class)
+project(cpp-inheritance)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
         main.cpp
-        point.h
-        box.h
         )
 
-add_executable(cpp-class ${SOURCE_FILES})
+add_executable(cpp-inheritance ${SOURCE_FILES})
