--- a/basic/cpp-data-types/CMakeLists.txt
+++ b/basic/cpp-data-types/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.2)
-project(cpp-variable-types)
+project(cpp-data-types)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES cpp-variable-types.cpp)
+set(SOURCE_FILES cpp-data-types.cpp)
 
-add_executable(cpp-variable-types ${SOURCE_FILES})
+add_executable(cpp-data-types ${SOURCE_FILES})
