--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(cpp-array)
 add_subdirectory(cpp-string)
 add_subdirectory(cpp-pointer)
 add_subdirectory(cpp-time)
+add_subdirectory(constants)
