--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(cpp-string)
 add_subdirectory(cpp-pointer)
 add_subdirectory(cpp-time)
 add_subdirectory(constants)
+add_subdirectory(control)
