--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(cpp-pointer)
 add_subdirectory(cpp-time)
 add_subdirectory(constants)
 add_subdirectory(control)
+add_subdirectory(basic-io)
