--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ set(SOURCE_FILES main.cpp)
 add_executable(learn-cpp ${SOURCE_FILES})
 add_subdirectory(basic)
 add_subdirectory(class)
+add_subdirectory(cmake)
