--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(cpp-time)
 add_subdirectory(constants)
 add_subdirectory(control)
 add_subdirectory(basic-io)
+add_subdirectory(functions)
