--- a/basic/cpp-data-types/CMakeLists.txt
+++ b/basic/cpp-data-types/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(floating-point-numbers floating-point-numbers.cpp)
 add_executable(boolean-values boolean-values.cpp)
 add_executable(chars chars.cpp)
 add_executable(literals literals.cpp)
+add_executable(const const.cpp)
