--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(constants)
 add_subdirectory(control)
 add_subdirectory(basic-io)
 add_subdirectory(functions)
+add_subdirectory(dynamic-memory)
