--- a/class/CMakeLists.txt
+++ b/class/CMakeLists.txt
@@ -5,6 +5,7 @@ project(class)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 add_executable(class-member-functions class-member-functions.cpp)
+add_executable(cpp-overloading cpp-overloading.cpp)
 add_subdirectory(cpp-class)
 add_subdirectory(cpp-inheritance)
 
