--- a/class/CMakeLists.txt
+++ b/class/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(class-member-functions class-member-functions.cpp)
 add_executable(cpp-overloading cpp-overloading.cpp)
 add_executable(cpp-overloading2 cpp-overloading2.cpp)
 add_executable(polymorphism polymorphism.cpp)
+add_executable(call-operator-overloading call-operator-overloading.cpp)
 add_executable(data-abstraction data-abstraction.cpp)
 add_subdirectory(cpp-class)
 add_subdirectory(cpp-inheritance)
