--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(learn-cpp ${SOURCE_FILES})
 add_subdirectory(basic)
 add_subdirectory(class)
 add_subdirectory(cmake)
+add_subdirectory(primer)
