--- a/primer/ch02/CMakeLists.txt
+++ b/primer/ch02/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_executable(exercise2.4 exercise2.4.cpp)
 add_executable(exercise2.8 exercise2.8.cpp)
+add_executable(exercise2.17 exercise2.17.cpp)
+add_executable(exercise2.18 exercise2.18.cpp)
