update ch03 add string

--- a/primer/ch03/CMakeLists.txt
+++ b/primer/ch03/CMakeLists.txt
@@ -3,3 +3,9 @@ add_executable(exercise_3_1_a exercise_3_1_a.cpp)
 add_executable(exercise_3_1_b exercise_3_1_b.cpp)
 add_executable(exercise3_2_a exercise3_2_a.cpp)
 add_executable(exercise3_2_b exercise3_2_b.cpp)
+add_executable(demo3.2 demo3.2.cpp)
+add_executable(exercise3_4_a exercise3_4_a.cpp)
+add_executable(exercise3_4_b exercise3_4_b.cpp)
+add_executable(exercise3_5 exercise3_5.cpp)
+add_executable(demo3.2.3 demo3.2.3.cpp)
+add_executable(exercise3_6 exercise3_6.cpp)
