--- a/primer/ch03/CMakeLists.txt
+++ b/primer/ch03/CMakeLists.txt
@@ -9,3 +9,5 @@ add_executable(exercise3_4_b exercise3_4_b.cpp)
 add_executable(exercise3_5 exercise3_5.cpp)
 add_executable(demo3.2.3 demo3.2.3.cpp)
 add_executable(exercise3_6 exercise3_6.cpp)
+add_executable(demo3.3 demo3.3.cpp)
+add_executable(exercise3_16 exercise3_16.cpp)
