--- a/primer/ch03/CMakeLists.txt
+++ b/primer/ch03/CMakeLists.txt
@@ -13,3 +13,7 @@ add_executable(demo3.3 demo3.3.cpp)
 add_executable(exercise3_16 exercise3_16.cpp)
 add_executable(exercise3_17 exercise3_17.cpp)
 add_executable(exercise3_20 exercise3_20.cpp)
+add_executable(demo3.4 demo3.4.cpp)
+add_executable(exercise3.21 exercise3.21.cpp)
+add_executable(exercise3.22 exercise3.22.cpp)
+add_executable(exercise3.23 exercise3.23.cpp)
