--- a/primer/ch03/CMakeLists.txt
+++ b/primer/ch03/CMakeLists.txt
@@ -21,4 +21,12 @@ add_executable(exercise3.31 exercise3.31.cpp)
 add_executable(exercise3.32 exercise3.32.cpp)
 add_executable(demo3.5 demo3.5.cpp)
 add_executable(exercise3.35 exercise3.35.cpp)
+add_executable(exercise3.36 exercise3.36.cpp)
+add_executable(exercise3.39 exercise3.39.cpp)
+add_executable(exercise3.40 exercise3.40.cpp)
+add_executable(exercise3.41 exercise3.41.cpp)
+add_executable(exercise3.42 exercise3.42.cpp)
+add_executable(exercise3.43 exercise3.43.cpp)
+add_executable(exercise3.44 exercise3.44.cpp)
+add_executable(exercise3.45 exercise3.45.cpp)
 
