--- a/primer/CMakeLists.txt
+++ b/primer/CMakeLists.txt
@@ -1,5 +1,5 @@
-
+include_directories(${PROJECT_SOURCE_DIR}/primer/include)
 add_subdirectory(ch01)
 add_subdirectory(ch02)
 add_subdirectory(ch03)
-include_directories(${PROJECT_SOURCE_DIR}/primer/include)
+add_subdirectory(ch06)
