--- a/primer/ch06/CMakeLists.txt
+++ b/primer/ch06/CMakeLists.txt
@@ -4,3 +4,6 @@ add_executable(exercise6.5 exercise6.5.cpp)
 add_executable(exercise6.7 exercise6.7.cpp)
 add_executable(exercise6.8 exercise6.8.cpp)
 add_executable(exercise6.10 exercise6.10.cpp)
+add_executable(exercise6.11 exercise6.11.cpp)
+add_executable(exercise6.12 exercise6.12.cpp)
+add_executable(exercise6.17 exercise6.17.cpp)
