update ch06 about const

--- a/primer/ch06/CMakeLists.txt
+++ b/primer/ch06/CMakeLists.txt
@@ -7,3 +7,6 @@ add_executable(exercise6.10 exercise6.10.cpp)
 add_executable(exercise6.11 exercise6.11.cpp)
 add_executable(exercise6.12 exercise6.12.cpp)
 add_executable(exercise6.17 exercise6.17.cpp)
+add_executable(exercise6.21 exercise6.21.cpp)
+add_executable(exercise6.22 exercise6.22.cpp)
+add_executable(exercise6.23 exercise6.23.cpp)
