--- a/primer/ch06/CMakeLists.txt
+++ b/primer/ch06/CMakeLists.txt
@@ -10,3 +10,6 @@ add_executable(exercise6.17 exercise6.17.cpp)
 add_executable(exercise6.21 exercise6.21.cpp)
 add_executable(exercise6.22 exercise6.22.cpp)
 add_executable(exercise6.23 exercise6.23.cpp)
+add_executable(exercise6.25 exercise6.25.cpp)
+add_executable(exercise6.27 exercise6.27.cpp)
+add_executable(exercise6.30 exercise6.30.cpp)
