--- a/primer/ch06/CMakeLists.txt
+++ b/primer/ch06/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(exercise6.23 exercise6.23.cpp)
 add_executable(exercise6.25 exercise6.25.cpp)
 add_executable(exercise6.27 exercise6.27.cpp)
 add_executable(exercise6.30 exercise6.30.cpp)
+add_executable(exercise6.33 exercise6.33.cpp)
+add_executable(exercise6.36 exercise6.36.cpp)
