--- a/basic/cpp-pointer/CMakeLists.txt
+++ b/basic/cpp-pointer/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp)
 
-add_executable(cpp-pointer ${SOURCE_FILES})
+add_executable(cpp-pointer-main ${SOURCE_FILES})
+add_executable(cpp-pointer pointer.cpp)
