update ref new function

--- a/basic/functions/CMakeLists.txt
+++ b/basic/functions/CMakeLists.txt
@@ -1,6 +1,2 @@
-cmake_minimum_required(VERSION 3.2)
-
-project(functions)
-
-aux_source_directory(. SOURCES)
-add_executable(functions ${SOURCES})
+add_executable(functions main.cpp functions.cpp functions.h)
+add_executable(func func.cpp)
