--- a/basic/dynamic-memory/CMakeLists.txt
+++ b/basic/dynamic-memory/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.2)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_executable(new new.cpp)
 add_executable(mem mem.cpp)
+add_executable(ref ref.cpp)
