update class init static this const

--- a/class/cpp-class/CMakeLists.txt
+++ b/class/cpp-class/CMakeLists.txt
@@ -4,3 +4,7 @@ add_executable(cpp-student student.cpp)
 add_executable(cpp-access access.cpp)
 add_executable(cpp-private private.cpp)
 add_executable(cpp-construction construction.cpp)
+add_executable(cpp-init init.cpp)
+add_executable(cpp-static static.cpp)
+add_executable(cpp-this this.cpp)
+add_executable(cpp-const const.cpp)
