update friend overloading

--- a/class/cpp-class/CMakeLists.txt
+++ b/class/cpp-class/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(cpp-init init.cpp)
 add_executable(cpp-static static.cpp)
 add_executable(cpp-this this.cpp)
 add_executable(cpp-const const.cpp)
+add_executable(cpp-friend friend.cpp)
+add_executable(cpp-overloading overloading.cpp)
