--- a/class/cpp-inheritance/CMakeLists.txt
+++ b/class/cpp-inheritance/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
-
-project(cpp-inheritance)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-set(SOURCE_FILES
-        main.cpp
-        )
-
-add_executable(cpp-inheritance ${SOURCE_FILES})
+add_executable(cpp-inheritance-main main.cpp)
+add_executable(cpp-inheritance inherit.cpp)
+add_executable(cpp-inheritances inherits.cpp)
+add_executable(cpp-inheritance-method inherit-method.cpp)
