update inherit virtual

--- a/class/cpp-inheritance/CMakeLists.txt
+++ b/class/cpp-inheritance/CMakeLists.txt
@@ -4,3 +4,5 @@ add_executable(cpp-inheritance-main main.cpp)
 add_executable(cpp-inheritance inherit.cpp)
 add_executable(cpp-inheritances inherits.cpp)
 add_executable(cpp-inheritance-method inherit-method.cpp)
+add_executable(cpp-inheritance-virtual inherit-virtual.cpp)
+add_executable(cpp-inheritance-polymorphism polymorphism.cpp)
