--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -6,3 +6,6 @@ add_executable(template-example5 example5.cpp)
 add_executable(class-template class-template.cpp)
 add_executable(class-template2 class-template2.cpp)
 add_executable(class-template3 class-template3.cpp)
+add_executable(template-inherit template-inherit.cpp)
+add_executable(template-inherit2 template-inherit2.cpp)
+add_executable(class-template-friend class-template-friend.cpp)
