--- a/template/vector/CMakeLists.txt
+++ b/template/vector/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(vector1 vector1.cpp)
 add_executable(vector2 vector2.cpp)
 add_executable(vector3 vector3.cpp)
+add_executable(vector4 vector4.cpp)
