add lambda,update auto array

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(SOURCE_FILES main.cpp)
 
 add_executable(learn-cpp ${SOURCE_FILES})
+target_link_libraries(learn-cpp pthread)
+
 add_subdirectory(basic)
 add_subdirectory(class)
 add_subdirectory(cmake)
