--- a/basic/cpp-data-types/CMakeLists.txt
+++ b/basic/cpp-data-types/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(boolean-values boolean-values.cpp)
 add_executable(chars chars.cpp)
 add_executable(literals literals.cpp)
 add_executable(const const.cpp)
+add_executable(auto auto.cpp)
