--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(control)
 add_subdirectory(basic-io)
 add_subdirectory(functions)
 add_subdirectory(dynamic-memory)
+add_subdirectory(lambda)
