--- a/basic/cpp-array/CMakeLists.txt
+++ b/basic/cpp-array/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(SOURCE_FILES main.cpp)
 
 add_executable(cpp-array ${SOURCE_FILES})
+add_executable(cpp-array2 array.cpp)
