--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(basic-io)
 add_subdirectory(functions)
 add_subdirectory(dynamic-memory)
 add_subdirectory(lambda)
+add_subdirectory(tuple)
